dev/homepage/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
      containers:
        - name: homepage
          image: "ghcr.io/benphelps/homepage:v0.6.10"
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: services
              subPath: services.yaml
              mountPath: /app/config/services.yaml
            - name: settings
              subPath: settings.yaml
              mountPath: /app/config/settings.yaml
            - name: blank
              subPath: blank.yaml
              mountPath: /app/config/bookmarks.yaml
            - name: blank
              subPath: blank.yaml
              mountPath: /app/config/docker.yaml
            - name: blank
              subPath: blank.yaml
              mountPath: /app/config/kubernetes.yaml
            - name: blank
              subPath: blank.yaml
              mountPath: /app/config/widgets.yaml
            - name: logs
              mountPath: /app/config/logs
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
      volumes:
        - name: services
          configMap:
            name: homepage-services
        - name: settings
          configMap:
            name: homepage-settings
        - name: blank
          configMap:
            name: homepage-blank
        - name: logs
          emptyDir:
            {}
